# OneBotZX

./: .gitignore  README.md  answersheet.py  bot.py  config.example.yml  config.py  filesystem.py  login.py  models.py  modules.py  msg.py  pyproject.toml  requirements.txt  teacher.py  zhixue.py
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
config/: config.example.yml  config_loader.py
onebotzx/: answersheet.py  bot.py  config_loader.py  login.py  models.py  msg.py  zhixue.py
src/OneBotZX/: answersheet.py  config_loader.py  filesystem.py  login.py  msg.py  teacher.py
