[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OneBotZX"
version = "1.1.0"
description = "对接 OneBot11 标准 HTTP 的轻量智学网机器人"
authors = [
    { name = "amakerlife", email = "64350662+amakerlife@users.noreply.github.com" }
]
license = "GPL-3.0"
homepage = "https://github.com/amakerlife/OneBotZX"
repository = "https://github.com/amakerlife/OneBotZX"
dependencies = [
    "Flask==3.1.0",
    "loguru==0.7.3",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "zhixuewang==1.3.2",
    "openpyxl==3.1.5",
    "pillow==11.1.0",
    "Flask-Limiter==3.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]